# gst-rtmpsrv

./: .gitignore  CMakeLists.txt  README.md
src/: gs_pushstream.cpp  gs_pushstream.h  main.cpp
